<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".InputFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_product_type"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="8dp"
            android:text="@string/type_phones" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="8dp"
            android:text="@string/type_headphones" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="8dp"
            android:text="@string/type_smartwatches" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_brand"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroupBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="8dp"
            android:text="@string/brand_apple" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="8dp"
            android:text="@string/brand_samsung" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="8dp"
            android:text="@string/brand_xiaomi" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"/>

</LinearLayout>
